apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'net.serenity-bdd.aggregator'

version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}
buildscript {
    repositories {

        mavenCentral()
    }
    dependencies {
        classpath("net.serenity-bdd:serenity-gradle-plugin:2.0.89")
    }
}
test {
    useJUnitPlatform()
}

ext{
    serenityVersion = '2.0.90'
    serenityCucumberVersion = '1.9.49'
}
tasks.withType(Test) {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
}

dependencies {
    implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
    testImplementation 'org.junit.platform:junit-platform-commons:1.5.2'
    testImplementation("org.junit.jupiter:junit-jupiter-api:5.4.2")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.4.2")
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    testImplementation 'org.assertj:assertj-core:3.12.2'
    testImplementation 'org.slf4j:slf4j-simple:1.7.29'
    testImplementation "net.serenity-bdd:serenity-core:$rootProject.ext.serenityVersion"
    testImplementation "net.serenity-bdd:serenity-junit:$rootProject.ext.serenityVersion"
    implementation "net.serenity-bdd:serenity-screenplay:$rootProject.ext.serenityVersion"
    implementation "net.serenity-bdd:serenity-screenplay-rest:$rootProject.ext.serenityVersion"
    implementation "net.serenity-bdd:serenity-cucumber:$rootProject.ext.serenityCucumberVersion"


}
gradle.startParameter.continueOnFailure = true